--- a/app/src/main/res/layout/activity_official_store.xml
+++ b/app/src/main/res/layout/activity_official_store.xml
@@ -9,13 +9,13 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="20sp"
-        android:text="Official Store"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginHorizontal="15dp"
+        android:layout_marginVertical="20sp"
+        android:text="@string/official_store"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
@@ -23,13 +23,13 @@
         android:id="@+id/tv_lihat_semua_official"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="15dp"
         android:layout_marginVertical="20sp"
-        android:text="Lihat Semua"
         android:gravity="center_vertical"
+        android:text="@string/lihat_semua"
         android:textColor="@color/teal"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginHorizontal="15dp"
         app:layout_constraintTop_toTopOf="parent" />
 
 
@@ -38,8 +38,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="10dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_lihat_semua_official"
-        android:layout_marginHorizontal="15dp"
-        />
+        tools:listitem="@layout/item_official_store" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
