--- a/app/src/main/res/layout/item_official_store.xml
+++ b/app/src/main/res/layout/item_official_store.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/cv_official_store"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:id="@+id/cv_official_store"
+    android:layout_width="120dp"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_margin="5dp"
@@ -14,22 +14,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/iv_store_logo"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginTop="10dp"
-            android:contentDescription="Logo Official Store"
+            android:contentDescription="@string/logo_official_store"
             android:src="@drawable/uniliver_logo" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/very_light_gray"
-            android:layout_marginVertical="10dp"/>
+            android:layout_marginVertical="10dp"
+            android:background="@color/very_light_gray" />
 
         <TextView
             android:id="@+id/tv_nama_store"
@@ -38,12 +37,12 @@
             android:layout_marginHorizontal="15dp"
             android:layout_marginBottom="10dp"
             android:ellipsize="end"
-            android:textAlignment="center"
             android:maxLines="2"
-            tools:text="Uniliver"
+            android:textAlignment="center"
             android:textColor="@color/teal"
             android:textSize="12sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            tools:text="Uniliver" />
 
     </LinearLayout>
 
