--- a/app/src/main/res/layout/activity_detail_official_store.xml
+++ b/app/src/main/res/layout/activity_detail_official_store.xml
@@ -22,36 +22,44 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/very_light_gray"
-        android:padding="15dp"
+    <androidx.core.widget.NestedScrollView
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context=".presentation.homepage.activity.DetailOfficialStoreActivity">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/tv_official_store_popular"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/official_store_popular"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteY="15dp" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_detail_official_store"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_official_store_popular"
-            tools:listitem="@layout/item_official_store" />
+            android:layout_height="match_parent"
+            android:background="@color/very_light_gray"
+            android:padding="15dp"
+            tools:context=".presentation.homepage.activity.DetailOfficialStoreActivity">
+
+            <TextView
+                android:id="@+id/tv_official_store_popular"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/official_store_popular"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:layout_editor_absoluteY="15dp" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_detail_official_store"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_official_store_popular"
+                tools:listitem="@layout/item_official_store" />
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </androidx.core.widget.NestedScrollView>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
