--- a/app/src/main/res/layout/item_official_store.xml
+++ b/app/src/main/res/layout/item_official_store.xml
@@ -4,46 +4,93 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cv_official_store"
     android:layout_width="120dp"
-    android:layout_height="wrap_content"
+    android:layout_height="180dp"
     android:layout_gravity="center"
     android:layout_margin="5dp"
     app:cardCornerRadius="12dp"
     app:cardElevation="4dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical">
+    <!--    <LinearLayout-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:gravity="center"-->
+    <!--        android:orientation="vertical">-->
+
+    <!--        <ImageView-->
+    <!--            android:id="@+id/iv_store_logo"-->
+    <!--            android:layout_width="60dp"-->
+    <!--            android:layout_height="60dp"-->
+    <!--            android:layout_marginTop="10dp"-->
+    <!--            android:contentDescription="@string/logo_official_store"-->
+    <!--            android:src="@drawable/uniliver_logo" />-->
+
+    <!--        <View-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="1dp"-->
+    <!--            android:layout_marginVertical="10dp"-->
+    <!--            android:background="@color/very_light_gray" />-->
+
+    <!--        <TextView-->
+    <!--            android:id="@+id/tv_nama_store"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_marginHorizontal="15dp"-->
+    <!--            android:layout_marginBottom="10dp"-->
+    <!--            android:ellipsize="end"-->
+    <!--            android:maxLines="2"-->
+    <!--            android:textAlignment="center"-->
+    <!--            android:textColor="@color/teal"-->
+    <!--            android:textSize="12sp"-->
+    <!--            android:textStyle="bold"-->
+    <!--            tools:text="Uniliver" />-->
+
+    <!--    </LinearLayout>-->
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="120dp"
+        android:layout_height="180dp">
 
         <ImageView
-            android:id="@+id/iv_store_logo"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="10dp"
-            android:contentDescription="@string/logo_official_store"
-            android:src="@drawable/uniliver_logo" />
-
-        <View
+            android:id="@+id/iv_product_logo"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginVertical="10dp"
-            android:background="@color/very_light_gray" />
+            android:layout_height="75dp"
+            android:src="@drawable/dancow"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/iv_store_logo"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:src="@drawable/uniliver_logo"
+            app:civ_border_color="@color/gray"
+            app:civ_border_width="1dp"
+            app:civ_circle_background_color="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_nama_store"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="15dp"
+            android:layout_marginTop="15dp"
             android:layout_marginBottom="10dp"
             android:ellipsize="end"
             android:maxLines="2"
             android:textAlignment="center"
             android:textColor="@color/teal"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:textStyle="bold"
-            tools:text="Uniliver" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_store_logo"
+            tools:text="Uniliver\n univlecer" />
 
-    </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
