--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="teal">#0460a7</color>
     <color name="very_light_gray">#D3D3D3</color>
+    <color name="gray">#808080</color>
     <color name="red">#d00b0b</color>
-
+    <color name="sky_blue">#87CEEB</color>
 </resources>
