--- a/app/src/main/res/layout/fragment_product_list_terlaris.xml
+++ b/app/src/main/res/layout/fragment_product_list_terlaris.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.homepage.fragment.FragmentProductListTerlaris">
+    tools:context=".presentation.homepage.fragment.productlist.hargaspesial.FragmentProductListHargaSpesialTerlaris">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
