get harga terlaris dan get gratis produk -- blum rapih

--- a/app/src/main/res/layout/fragment_product_list_gratis_product_terlaris.xml
+++ b/app/src/main/res/layout/fragment_product_list_gratis_product_terlaris.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.homepage.fragment.productlist.hargaspesial.FragmentProductListHargaSpesialPromosi">
-
-    <!-- TODO: Update blank fragment layout -->
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".presentation.homepage.fragment.productlist.gratisproduct.FragmentProductListGratisProductTerlaris">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_product_list_promosi"
+        android:id="@+id/rv_product_list_terlaris"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
