--- a/app/src/main/res/layout/tab_item.xml
+++ b/app/src/main/res/layout/tab_item.xml
@@ -1,26 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="wrap_content">
 
     <TextView
-        android:textColor="@drawable/tab_item_selected"
         android:id="@+id/tv_tab_item"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Promosi"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textColor="@drawable/tab_item_selected"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/iv_tab_item"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/key_arrow_right"
-        app:layout_constraintLeft_toRightOf="@id/tv_tab_item"
-        android:layout_width="20dp"
+        android:id="@+id/iv_tab_item_up"
+        android:layout_width="10dp"
         android:layout_height="20dp"
-        android:contentDescription="TODO" />
+        android:contentDescription="TODO"
+        app:layout_constraintLeft_toRightOf="@id/tv_tab_item"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@drawable/arrow_up_tab_item" />
+
+    <ImageView
+        android:id="@+id/iv_tab_item_down"
+        android:layout_width="10dp"
+        android:layout_height="20dp"
+        android:contentDescription="TODO"
+        app:layout_constraintLeft_toRightOf="@id/iv_tab_item_up"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@drawable/arrow_down_tab_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
