--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="gray">#808080</color>
     <color name="red">#d00b0b</color>
     <color name="sky_blue">#87CEEB</color>
+    <color name = "red_maroon">#800000</color>
 </resources>
