main activity, fragments, bottom navigation, pindahin

--- a/app/src/main/res/layout/activity_all_official_store.xml
+++ b/app/src/main/res/layout/activity_all_official_store.xml
@@ -32,7 +32,7 @@
             android:layout_height="match_parent"
             android:background="@color/very_light_gray"
             android:padding="15dp"
-            tools:context=".presentation.homepage.activity.officialstore.AllOfficialStoreActivity">
+            tools:context=".presentation.homepage.components.activity.officialstore.AllOfficialStoreActivity">
 
             <TextView
                 android:id="@+id/tv_official_store_popular"
