--- a/app/src/main/res/layout/fragment_product_list_gratis_product_nama_produk.xml
+++ b/app/src/main/res/layout/fragment_product_list_gratis_product_nama_produk.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".presentation.homepage.fragment.productlist.gratisproduct.FragmentProductListGratisProductNamaProduk">
+    tools:context=".presentation.homepage.components.fragment.productlist.gratisproduct.FragmentProductListGratisProductNamaProduk">
 
     <androidx.recyclerview.widget.RecyclerView
         tools:listitem="@layout/item_product_gratis_product"
