--- a/app/src/main/res/layout/fragment_product_list_gratis_product_terlaris.xml
+++ b/app/src/main/res/layout/fragment_product_list_gratis_product_terlaris.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".presentation.homepage.fragment.productlist.gratisproduct.FragmentProductListGratisProductTerlaris">
+    tools:context=".presentation.homepage.components.fragment.productlist.gratisproduct.FragmentProductListGratisProductTerlaris">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_product_list_terlaris"
