--- a/app/src/main/res/layout/fragment_product_list_promosi_harga_spesial.xml
+++ b/app/src/main/res/layout/fragment_product_list_promosi_harga_spesial.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.homepage.fragment.productlist.hargaspesial.FragmentProductListHargaSpesialPromosi">
+    tools:context=".presentation.homepage.components.fragment.productlist.hargaspesial.FragmentProductListHargaSpesialPromosi">
 
 
     <androidx.recyclerview.widget.RecyclerView
