--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,6 @@
     <color name="red">#d00b0b</color>
     <color name="sky_blue">#87CEEB</color>
     <color name = "red_maroon">#800000</color>
+    <color name="gray1">#808191</color>
+    <color name="gray2">#898A90</color>
 </resources>
