registration layout progress

--- a/app/src/main/res/layout/fragment_input_phone_number.xml
+++ b/app/src/main/res/layout/fragment_input_phone_number.xml
@@ -5,15 +5,29 @@
     android:layout_height="match_parent"
     tools:context=".presentation.authentication.activity.register.fragment.InputPhoneNumberFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Select Phone Number to Use"
-        android:textSize="26sp"
-        android:layout_gravity="center"/>
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="phone"/>
+        android:orientation="vertical"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="80dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Select Phone Number to Use"
+            android:textSize="26sp"
+            android:layout_gravity="center"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="phone"
+            android:hint="@string/_62"
+            android:padding="10dp"
+            android:elevation="5dp"
+            android:layout_margin="40dp"
+            android:background="@drawable/custom_edit_text_rounded_corner"
+            android:autofillHints="@string/_62" />
+    </LinearLayout>
+
 
 </FrameLayout>
