--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name = "red_maroon">#800000</color>
     <color name="gray1">#808191</color>
     <color name="gray2">#898A90</color>
+    <color name="light_white">#F5FEFD</color>
 </resources>
