--- a/app/src/main/res/layout/fragment_input_user_data.xml
+++ b/app/src/main/res/layout/fragment_input_user_data.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.authentication.activity.register.fragment.InputUserDataFragment">
+    tools:context=".presentation.authentication.fragment.register.InputUserDataFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
