--- a/app/src/main/res/layout/activity_all_banner_list.xml
+++ b/app/src/main/res/layout/activity_all_banner_list.xml
@@ -6,4 +6,36 @@
     android:layout_height="match_parent"
     tools:context=".presentation.homepage.components.activity.banner.AllBannerListActivity">
 
+    <ImageButton
+        android:id="@+id/btn_banner_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/arrow_back"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/rv_banner_list"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="@dimen/mrgn_1"
+        android:layout_marginHorizontal="@dimen/mrgn_0"
+        android:layout_marginBottom="@dimen/mrgn_3"/>
+
+    <TextView
+        android:text="@string/banner_list_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:layout_marginStart="@dimen/mrgn_2"
+        android:textColor="@color/white"
+        app:layout_constraintTop_toTopOf="@id/btn_banner_back"
+        app:layout_constraintBottom_toBottomOf="@id/btn_banner_back"
+        app:layout_constraintStart_toEndOf="@id/btn_banner_back"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_banner_list"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/btn_banner_back"
+        app:layout_constraintEnd_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
