--- a/app/src/main/res/layout/fragment_banner_beranda.xml
+++ b/app/src/main/res/layout/fragment_banner_beranda.xml
@@ -1,14 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.homepage.components.fragment.banner.FragmentBannerBeranda">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <com.smarteist.autoimageslider.SliderView
+        android:id="@+id/sv_slider_banner"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="@dimen/sv_height1"
+        android:layout_marginHorizontal="@dimen/mrgn_1.5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:sliderAnimationDuration="600"
+        app:sliderIndicatorMarginBottom="@dimen/svbtmrgin1"
+        app:sliderIndicatorGravity="bottom|left"
+        app:sliderIndicatorSelectedColor="@color/red"
+        app:sliderIndicatorUnselectedColor="@color/darkGrey2"
+        />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/tv_lihat_semua_banner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lihat_semua_promo"
+        android:textColor="@color/teal"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@id/sv_slider_banner"
+        app:layout_constraintBottom_toBottomOf="@id/sv_slider_banner"/>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
