--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,9 @@
     <color name="gray1">#808191</color>
     <color name="gray2">#898A90</color>
     <color name="light_white">#F5FEFD</color>
+
+    <color name="darkGrey">#393939</color>
+    <color name="darkGrey2">#6C6C6C</color>
+
+
 </resources>
