--- a/app/src/main/res/layout/activity_detail_official_store.xml
+++ b/app/src/main/res/layout/activity_detail_official_store.xml
@@ -128,13 +128,31 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/cl_detail_official_store" />
 
+            <TextView
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:layout_marginTop="15dp"
+                android:id="@+id/tv_brands_detail_official_store"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:text="Belanja berdasarkan brand"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/iv_banner_official_store" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_brands_detail_official_store"
+                app:layout_constraintTop_toBottomOf="@id/tv_brands_detail_official_store"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/cl_sticky_official_store"
                 android:layout_width="match_parent"
                 android:layout_height="700dp"
                 android:layout_marginTop="40dp"
-                app:layout_constraintTop_toBottomOf="@id/iv_banner_official_store">
+                app:layout_constraintTop_toBottomOf="@id/rv_brands_detail_official_store">
 
                 <com.google.android.material.divider.MaterialDivider
                     android:id="@+id/divider_official_store"
