--- a/app/src/main/res/layout/activity_detail_official_store.xml
+++ b/app/src/main/res/layout/activity_detail_official_store.xml
@@ -129,29 +129,41 @@
                 app:layout_constraintTop_toBottomOf="@id/cl_detail_official_store" />
 
             <TextView
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:layout_marginTop="15dp"
                 android:id="@+id/tv_brands_detail_official_store"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="15dp"
                 android:text="Belanja berdasarkan brand"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/iv_banner_official_store" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_brands_detail_official_store"
-                app:layout_constraintTop_toBottomOf="@id/tv_brands_detail_official_store"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/tv_brands_detail_official_store" />
+
+            <TextView
+                android:id="@+id/tv_lihat_semua_brands_detail_official_store"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:drawableBottom="@drawable/baseline_keyboard_arrow_down_24_blue"
+                android:text="Lihat Semua"
+                android:textColor="@color/teal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/rv_brands_detail_official_store" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/cl_sticky_official_store"
                 android:layout_width="match_parent"
                 android:layout_height="700dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="60dp"
                 app:layout_constraintTop_toBottomOf="@id/rv_brands_detail_official_store">
 
                 <com.google.android.material.divider.MaterialDivider
@@ -175,9 +187,9 @@
 
                 <com.google.android.material.tabs.TabLayout
                     android:id="@+id/tl_official_store"
-                    android:layout_marginTop="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
                     app:layout_constraintTop_toBottomOf="@+id/tv_semua_produk"
                     app:tabMode="fixed" />
 
