--- a/app/src/main/res/layout/item_brand.xml
+++ b/app/src/main/res/layout/item_brand.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/cv_official_store"
+    android:id="@+id/cv_brand"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -18,7 +18,7 @@
         >
 
         <ImageView
-            android:id="@+id/iv_store_logo"
+            android:id="@+id/iv_brand_logo"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginTop="10dp"
@@ -32,7 +32,7 @@
             android:layout_marginVertical="10dp"/>
 
         <TextView
-            android:id="@+id/tv_nama_store"
+            android:id="@+id/tv_nama_brand"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="15dp"
