--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="teal">#0460a7</color>
-    <color name="very_light_gray">#ECECEC</color>
+    <color name="very_light_gray">#F4F4F4</color>
     <color name="gray">#808080</color>
     <color name="red">#d00b0b</color>
     <color name="sky_blue">#87CEEB</color>
@@ -18,6 +18,8 @@
     <color name="light_white">#F5FEFD</color>
     <color name="darkGrey">#393939</color>
     <color name="darkGrey2">#6C6C6C</color>
+    <color name="gold">#FFD700</color>
+    <color name="light_gray">#E8E8E8</color>
 
 
 </resources>
