--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:text="Login"
+        android:text="@string/login"
         android:textColor="@color/black"
         android:textStyle="bold"
         android:textSize="50sp" />
@@ -20,7 +20,7 @@
         android:id="@+id/til_email_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Email"
+        android:hint="@string/email"
         android:layout_below="@id/tv_title">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_email"
@@ -36,7 +36,7 @@
         android:id="@+id/til_password_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="password"
+        android:hint="@string/password"
         app:passwordToggleEnabled="true"
         android:layout_below="@id/til_email_layout">
         <com.google.android.material.textfield.TextInputEditText
