--- a/app/src/main/res/layout/fragment_input_phone_number.xml
+++ b/app/src/main/res/layout/fragment_input_phone_number.xml
@@ -18,6 +18,7 @@
             android:textSize="26sp"
             android:layout_gravity="center"/>
         <EditText
+            android:id="@+id/et_phone_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="phone"
