- product search sudah bisa nampilin semua kurang rapih aja

--- a/app/src/main/res/layout/activity_product_list_search_produk.xml
+++ b/app/src/main/res/layout/activity_product_list_search_produk.xml
@@ -7,7 +7,7 @@
     android:background="@color/very_light_gray"
     android:orientation="vertical"
     android:paddingVertical="5dp"
-    tools:context=".presentation.homepage.components.activity.productlist.ProductListSearchProduk">
+    tools:context=".presentation.homepage.components.activity.productlist.ProductListSearchProdukActivity">
 
     <LinearLayout
         android:id="@+id/ll_search_view"
