--- a/app/src/main/res/layout/fragment_banner_beranda.xml
+++ b/app/src/main/res/layout/fragment_banner_beranda.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.homepage.components.fragment.banner.FragmentBannerBeranda">
 
@@ -30,6 +30,19 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@id/sv_slider_banner"
         app:layout_constraintBottom_toBottomOf="@id/sv_slider_banner"/>
+
+<!--    <TextView-->
+<!--        android:id="@+id/tv_no_connect"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="@string/no_connection"-->
+<!--        android:textStyle="bold"-->
+<!--        android:textColor="@color/red"-->
+<!--        android:textSize="20sp"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"/>-->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
