--- a/app/src/main/res/layout/activity_all_banner_list.xml
+++ b/app/src/main/res/layout/activity_all_banner_list.xml
@@ -6,34 +6,32 @@
     android:layout_height="match_parent"
     tools:context=".presentation.homepage.components.activity.banner.AllBannerListActivity">
 
-    <ImageButton
-        android:id="@+id/btn_banner_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/arrow_back"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/rv_banner_list"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="@dimen/mrgn_1"
-        android:layout_marginHorizontal="@dimen/mrgn_0"
-        android:layout_marginBottom="@dimen/mrgn_3"/>
 
-    <TextView
-        android:text="@string/banner_list_title"
-        android:layout_width="wrap_content"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/apl_banner_list_toolbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:layout_marginStart="@dimen/mrgn_2"
-        android:textColor="@color/white"
-        app:layout_constraintTop_toTopOf="@id/btn_banner_back"
-        app:layout_constraintBottom_toBottomOf="@id/btn_banner_back"
-        app:layout_constraintStart_toEndOf="@id/btn_banner_back"/>
+        app:elevation="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_scrollFlags="scroll|enterAlways" >
+
+        <include
+            android:id="@+id/all_banner_list_toolbar"
+            layout="@layout/promo_banner_toolbar"
+            />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_banner_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/btn_banner_back"
+        android:paddingTop="10dp"
+        android:clipToPadding="false"
+        app:layout_constraintTop_toBottomOf="@+id/apl_banner_list_toolbar"
         app:layout_constraintEnd_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
