--- a/app/src/main/res/layout/item_product_categories.xml
+++ b/app/src/main/res/layout/item_product_categories.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="150dp"
+    android:layout_height="200dp"
+    android:layout_margin="@dimen/mrgn_1"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/shape_product_categories">
     <androidx.constraintlayout.widget.ConstraintLayout
