--- a/app/src/main/res/navigation/register_nav_graph.xml
+++ b/app/src/main/res/navigation/register_nav_graph.xml
@@ -3,36 +3,44 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/register_nav_graph"
-    app:startDestination="@id/otpVerificationFragment2">
+    app:startDestination="@id/inputUserDataFragment">
 
     <fragment
         android:id="@+id/inputPhoneNumberFragment"
         android:name="com.academy.alfagiftmini.presentation.authentication.fragment.register.InputPhoneNumberFragment"
         android:label="fragment_input_phone_number"
-        tools:layout="@layout/fragment_input_phone_number" >
+        tools:layout="@layout/fragment_input_phone_number">
         <action
             android:id="@+id/action_inputPhoneNumberFragment_to_inputUserDataFragment"
             app:destination="@id/inputUserDataFragment" />
         <action
-            android:id="@+id/action_inputPhoneNumberFragment_to_otpVerificationFragment2"
-            app:destination="@id/otpVerificationFragment2" />
+            android:id="@+id/action_inputPhoneNumberFragment_to_otpVerificationFragment"
+            app:destination="@id/otpVerificationFragment" />
+        <argument
+            android:name="registrationData"
+            app:argType="com.academy.alfagiftmini.presentation.authentication.fragment.register.RegistrationDataModel" />
     </fragment>
+
     <fragment
         android:id="@+id/inputUserDataFragment"
         android:name="com.academy.alfagiftmini.presentation.authentication.fragment.register.InputUserDataFragment"
         android:label="fragment_input_user_data"
-        tools:layout="@layout/fragment_input_user_data" >
+        tools:layout="@layout/fragment_input_user_data">
         <action
             android:id="@+id/action_inputUserDataFragment_to_inputPhoneNumberFragment"
             app:destination="@id/inputPhoneNumberFragment" />
     </fragment>
+
     <fragment
-        android:id="@+id/otpVerificationFragment2"
+        android:id="@+id/otpVerificationFragment"
         android:name="com.academy.alfagiftmini.presentation.authentication.fragment.register.OtpVerificationFragment"
         android:label="fragment_otp_verification"
-        tools:layout="@layout/fragment_otp_verification" >
+        tools:layout="@layout/fragment_otp_verification">
         <action
             android:id="@+id/action_otpVerificationFragment2_to_inputPhoneNumberFragment"
             app:destination="@id/inputPhoneNumberFragment" />
+        <argument
+            android:name="registrationData"
+            app:argType="com.academy.alfagiftmini.presentation.authentication.fragment.register.RegistrationDataModel" />
     </fragment>
 </navigation>
