--- a/app/src/main/res/layout/fragment_otp_verification.xml
+++ b/app/src/main/res/layout/fragment_otp_verification.xml
@@ -34,8 +34,8 @@
         <com.chaos.view.PinView
             android:id="@+id/pv_otp_code"
             style="@style/PinWidget.PinView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
             android:layout_margin="20dp"
             android:cursorVisible="true"
             android:inputType="number"
@@ -44,9 +44,8 @@
             android:textColor="@color/black"
             app:hideLineWhenFilled="true"
             app:itemCount="6"
-            app:itemHeight="50dp"
             app:itemRadius="5dp"
-            app:itemWidth="50dp"
+            app:itemWidth="35dp"
             app:lineColor="@color/black" />
     </LinearLayout>
 </FrameLayout>
