--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
     <color name="darkGrey2">#6C6C6C</color>
     <color name="gold">#FFD700</color>
     <color name="light_gray">#E8E8E8</color>
+    <color name="transparant">#00FFFF</color>
 
 
 </resources>
