--- a/app/src/main/res/layout/fragment_beranda.xml
+++ b/app/src/main/res/layout/fragment_beranda.xml
@@ -18,6 +18,13 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"/>
 
+  <FrameLayout
+      android:id="@+id/fl_product_categories"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintStart_toStartOf="parent"/>
+
 
 
  </androidx.constraintlayout.widget.ConstraintLayout>
