--- a/app/src/main/res/layout/fragment_input_user_data.xml
+++ b/app/src/main/res/layout/fragment_input_user_data.xml
@@ -1,77 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="40dp"
+    android:background="@color/red"
     tools:context=".presentation.authentication.fragment.register.InputUserDataFragment">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:orientation="vertical">
+    <LinearLayout style="@style/Edit_Text_Container_Style">
 
         <EditText
             android:id="@+id/et_first_name"
+            style="@style/Edit_Text_Default_Style"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:autofillHints="first name"
-            android:background="@drawable/custom_edit_text_rounded_corner"
-            android:elevation="5dp"
             android:hint="@string/first_name"
-            android:inputType="textPersonName"
-            android:minHeight="48dp"
-            android:padding="10dp" />
+            android:inputType="textPersonName" />
 
         <EditText
             android:id="@+id/et_last_name"
+            style="@style/Edit_Text_Default_Style"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:autofillHints="last name"
-            android:background="@drawable/custom_edit_text_rounded_corner"
-            android:elevation="5dp"
             android:hint="@string/last_name"
-            android:inputType="textPersonName"
-            android:minHeight="48dp"
-            android:padding="10dp" />
+            android:inputType="textPersonName" />
 
         <EditText
             android:id="@+id/et_email"
+            style="@style/Edit_Text_Default_Style"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:autofillHints="blabla@example.com"
-            android:background="@drawable/custom_edit_text_rounded_corner"
-            android:elevation="5dp"
             android:hint="@string/e_mail_address"
-            android:inputType="textEmailAddress"
-            android:minHeight="48dp"
-            android:padding="10dp" />
+            android:inputType="textEmailAddress" />
 
         <EditText
             android:id="@+id/et_password"
+            style="@style/Edit_Text_Default_Style"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:autofillHints="0123456789"
-            android:background="@drawable/custom_edit_text_rounded_corner"
-            android:elevation="5dp"
             android:hint="@string/password"
-            android:inputType="textPassword"
-            android:minHeight="48dp"
-            android:padding="10dp" />
+            android:inputType="textPassword" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_submit_user_data"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="20dp"
+            android:textColor="@color/white"
             android:background="@drawable/shape_btn_login_register"
-            android:text="@string/submit"
-            android:layout_margin="20dp"/>
+            android:text="@string/submit" />
     </LinearLayout>
-
 </FrameLayout>
